--- a/Depo/Depo/Presentation/CollectionViewCells/InstapickAnalyzeHistoryPhotoCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/InstapickAnalyzeHistoryPhotoCell.xib
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="BHT-bW-h3z" customClass="InstapickAnalyzeHistoryPhotoCell" customModule="lifebox" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="BHT-bW-h3z" customClass="InstapickAnalyzeHistoryPhotoCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="108"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -26,17 +24,17 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="xZQ-cj-yoX">
-                        <rect key="frame" x="19" y="21.5" width="42" height="37.5"/>
+                        <rect key="frame" x="19.5" y="21.5" width="41.5" height="37.5"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zl3-aY-YNm">
-                                <rect key="frame" x="11.5" y="0.0" width="19" height="17"/>
+                                <rect key="frame" x="11" y="0.0" width="19" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="PiJ-rl-HvP"/>
                                     <constraint firstAttribute="height" secondItem="zl3-aY-YNm" secondAttribute="width" multiplier="0.9" id="tak-6f-12Q"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="320-OA-N11">
-                                <rect key="frame" x="0.0" y="17" width="42" height="20.5"/>
+                                <rect key="frame" x="0.0" y="17" width="41.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -101,6 +99,7 @@
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="4fK-SD-seF"/>
             <constraints>
                 <constraint firstItem="Jvr-NL-CY6" firstAttribute="trailing" secondItem="iYj-XS-Dle" secondAttribute="trailing" id="4RA-Sg-ZZK"/>
                 <constraint firstItem="Jvr-NL-CY6" firstAttribute="bottom" secondItem="iYj-XS-Dle" secondAttribute="bottom" constant="3" id="9Pm-VC-rHG"/>
@@ -122,7 +121,6 @@
                 <constraint firstAttribute="trailing" secondItem="vHc-GA-Ynd" secondAttribute="trailing" id="yvi-Pn-kYV"/>
                 <constraint firstItem="YM8-Sf-HUz" firstAttribute="height" secondItem="iYj-XS-Dle" secondAttribute="height" multiplier="1:3" id="znL-Vh-aUf"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="4fK-SD-seF"/>
             <size key="customSize" width="118" height="102"/>
             <connections>
                 <outlet property="countLabel" destination="vHc-GA-Ynd" id="AFy-b9-EfY"/>
