--- a/Depo/Depo/Presentation/UserStories/InstaPick/AnalyzeHistory/AnalyzeHistoryViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/InstaPick/AnalyzeHistory/AnalyzeHistoryViewController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AnalyzeHistoryViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AnalyzeHistoryViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="bM6-zc-MfF" id="FRe-j8-8We"/>
                 <outlet property="designer" destination="Zh9-3c-Msj" id="V3b-16-TsY"/>
@@ -22,11 +21,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a7L-a1-TzF">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdK-Md-nJt">
                             <rect key="frame" x="30" y="157" width="315" height="21"/>
@@ -55,8 +54,8 @@
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bM6-zc-MfF">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Du7-br-KPw">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -65,13 +64,13 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="muL-9i-x4Y">
-                    <rect key="frame" x="0.0" y="517" width="375" height="86"/>
+                    <rect key="frame" x="0.0" y="537" width="375" height="86"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lbx-5u-NN7">
-                            <rect key="frame" x="90" y="-75" width="42" height="95"/>
+                            <rect key="frame" x="90" y="-75" width="41.5" height="95"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMl-8z-d71">
-                                    <rect key="frame" x="0.0" y="0.0" width="42" height="41"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="41.5" height="41"/>
                                     <string key="text">Start
 Here!</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -92,7 +91,7 @@ Here!</string>
                                 <constraint firstAttribute="trailing" secondItem="MMl-8z-d71" secondAttribute="trailing" id="waw-Ev-oxF"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAp-wq-sNv" customClass="BlueButtonWithMediumWhiteText" customModule="lifebox" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAp-wq-sNv" customClass="BlueButtonWithMediumWhiteText" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="79" y="20" width="217" height="46"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="46" id="G0q-oF-t9L"/>
@@ -114,7 +113,8 @@ Here!</string>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="a7L-a1-TzF" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="5FC-0l-ZMe"/>
                 <constraint firstItem="muL-9i-x4Y" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="8kz-bK-KHw"/>
@@ -129,10 +129,9 @@ Here!</string>
                 <constraint firstItem="bM6-zc-MfF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="uPd-Lv-He7"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
-        <customObject id="Zh9-3c-Msj" customClass="AnalyzeHistoryDesigner" customModule="lifebox" customModuleProvider="target">
+        <customObject id="Zh9-3c-Msj" customClass="AnalyzeHistoryDesigner" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="emptySubtitleLabel" destination="oD6-Bs-QAS" id="087-x2-qMH"/>
                 <outlet property="emptyTitleLabel" destination="JdK-Md-nJt" id="drf-5l-LSn"/>
@@ -141,7 +140,7 @@ Here!</string>
                 <outlet property="startLabel" destination="MMl-8z-d71" id="fke-Yw-QGI"/>
             </connections>
         </customObject>
-        <customObject id="R5A-jK-x2J" customClass="AnalyzeHistoryDisplayManager" customModule="lifebox" customModuleProvider="target">
+        <customObject id="R5A-jK-x2J" customClass="AnalyzeHistoryDisplayManager" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="emptyView" destination="a7L-a1-TzF" id="1kZ-vV-b3z"/>
                 <outlet property="newAnalysisView" destination="muL-9i-x4Y" id="1Dh-3m-mjO"/>
@@ -151,5 +150,8 @@ Here!</string>
     </objects>
     <resources>
         <image name="path_arrow" width="13" height="48"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
