--- a/Depo/Depo/Presentation/UserStories/Others/SegmentedController/SegmentedController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SegmentedController/SegmentedController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SegmentedController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SegmentedController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="aCl-BS-mK7" id="njA-cS-qHZ"/>
                 <outlet property="segmentedControl" destination="kla-02-C1E" id="7ie-A6-L4p"/>
@@ -24,7 +25,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qmm-Jd-Jcw">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                     <subviews>
-                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="kla-02-C1E" customClass="SegmentedControl" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="kla-02-C1E" customClass="SegmentedControl" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="107.5" y="14.5" width="160" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="kxd-Uq-6at"/>
@@ -38,7 +39,7 @@
                             </connections>
                         </segmentedControl>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="kla-02-C1E" firstAttribute="centerX" secondItem="qmm-Jd-Jcw" secondAttribute="centerX" id="Awt-ur-9Kn"/>
                         <constraint firstItem="kla-02-C1E" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qmm-Jd-Jcw" secondAttribute="leading" constant="10" id="B2w-bo-G4M"/>
@@ -49,10 +50,11 @@
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aCl-BS-mK7">
                     <rect key="frame" x="0.0" y="60" width="375" height="607"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qmm-Jd-Jcw" secondAttribute="trailing" id="9Wz-zQ-xir"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="aCl-BS-mK7" secondAttribute="bottom" id="Qo5-JE-MBA"/>
@@ -62,8 +64,12 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aCl-BS-mK7" secondAttribute="trailing" id="t6s-nQ-Hut"/>
                 <constraint firstItem="qmm-Jd-Jcw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="vvG-eo-k3g"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="140" y="154"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
